--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: #e9f1ef;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -38,5 +37,16 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  padding: 32px;
+  background-color: #ffffff;
+
+  img {
+    max-width: 100%;
   }
 }
